docs: document JEP 472 native-access packaging
Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>